fix html2canvas spacing issue

--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -99,7 +99,8 @@
     width: 100%;
 
     i {
-      width: 20px;
+      width: 1.5rem;
+      text-align: center;
     }
   }
 
