--- a/src/assets/styles/shame/_shame.scss
+++ b/src/assets/styles/shame/_shame.scss
@@ -3,28 +3,8 @@
   cursor: default;
 }
 
-.cp {
-  cursor: pointer;
-}
-
-.viewer-backdrop {
-  background-color: rgba(0, 0, 0, 0.8) !important;
-}
-
-.viewer-button::before {
-  transform: scale(1.5);
-}
-
-.viewer-toolbar > ul > li::before {
-  transform: scale(1.5);
-}
-
 .text-msg {
   color: var(--message_clr);
-}
-
-.name-space {
-  color: var(--cv_right__bg-a);
 }
 
 // Wrong css when dragging playing card
